--- a/ptlib-2.16.2/Makefile.mine
+++ b/ptlib-2.16.2/Makefile.mine
@@ -9,14 +9,16 @@ LINK_FLAGS = -w -g -D__STDC_CONSTANT_MACROS
 LIBS =  -lstdc++ -lpthread -lSDL2 -lavutil -lavformat -lavcodec -lswresample -lswscale -lwx_baseu-3.0 -lwx_mswu_core-3.0
 #########################################################
 
-PROGRAM = player
+PROGRAM = libpt
 
 OBJS = 
 
 # The directories in which source files reside.  
 # At least one path should be specified.  
 # SRCDIRS   := .        # current directory  
-SRCDIRS   :=  src/ptclib 
+SRCDIRS   :=  src/ptclib \
+			  src/ptlib/common
+			  
 # The source file types (headers excluded).  
 # At least one type should be specified.  
 # The valid suffixes are among of .c, .C, .cc, .cpp, .CPP, .c++, .cp, or .cxx.  
