--- a/ptlib-2.16.2/Makefile.mine
+++ b/ptlib-2.16.2/Makefile.mine
@@ -2,8 +2,8 @@ CC  = gcc
 CPP = g++
 
 ########################################
-CFLAGS = -fPIC -lpthread
-CPPFLAGS = -fPIC -g -w -std=c++11 -I./include
+CFLAGS = -Wfatal-errors -fPIC -lpthread
+CPPFLAGS = -Wfatal-errors -fPIC -g -w -std=c++11 -I./include
 
 LINK_FLAGS = -fPIC -w -g -D__STDC_CONSTANT_MACROS
 LIBS =  -lstdc++ -lssl -lcrypto -lexpat
