--- a/opal-3.16.2/Makefile.mine
+++ b/opal-3.16.2/Makefile.mine
@@ -44,7 +44,7 @@ endif
 # SRCEXTS   := .c      # C program  
 # SRCEXTS   := .cpp    # C++ program  
 # SRCEXTS   := .c .cpp # C/C++ program  
-SRCEXTS   := .cxx .cpp
+SRCEXTS   := .cxx .cpp .c
 
 ifneq ($(SRCDIRS),)
 ifneq ($(SRCEXTS),)
