--- a/opal-3.16.2/samples/openphone/Makefile
+++ b/opal-3.16.2/samples/openphone/Makefile
@@ -1,36 +1,7 @@
-#
-# Makefile
-#
-# Make file for simple sample application for the Open Phone Abstraction library.
-#
-# Copyright (c) 2006 Derek J Smithies
-#
-# The contents of this file are subject to the Mozilla Public License
-# Version 1.0 (the "License"); you may not use this file except in
-# compliance with the License. You may obtain a copy of the License at
-# http://www.mozilla.org/MPL/
-#
-# Software distributed under the License is distributed on an "AS IS"
-# basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
-# the License for the specific language governing rights and limitations
-# under the License.
-#
-# The Original Code is Open Phone Abstraction Library.
-#
-# The Initial Developer of the Original Code is Equivalence Pty. Ltd.
-#
-# Contributor(s): ______________________________________.
-#
-# $Revision$
-# $Author$
-# $Date$
-#
+CC  = gcc
+CPP = g++
 
-PROG		:= openphone
-SOURCES		:= main.cxx openphone.cxx
-
-VERSION_FILE    := version.h
-
+#########################################
 WX_CONFIG := $(firstword $(wildcard $(addsuffix /wx-config,$(subst :, ,$(PATH):/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.0/bin))))
 ifneq (,$(WX_CONFIG))
   WXRC := $(dir $(WX_CONFIG))/wxrc
@@ -52,34 +23,46 @@ else
     endif
   endif
 endif
+########################################
+CFLAGS = -Wfatal-errors -fPIC -lpthread
+CPPFLAGS = -Wfatal-errors -fPIC -g -W -Wall -std=c++11 -lpthread -I../../../ptlib-2.16.2/include -I../../../opal-3.16.2/include -I$(MINGW_PREFIX)/include/wx-3.0 -I$(MINGW_PREFIX)/lib/wx/include/msw-unicode-3.0 
 
-ifneq (,$(DEBUG_BUILD))
-  ifneq (,$(shell $(WX_CONFIG) --list | grep debug))
-    WX_CONFIG += --debug=$(DEBUG_BUILD)
-  else
-    CPPFLAGS += -DOPAL_WX_DEBUG_HACK
-  endif
-endif
-
-
-# Need this before the include of opal.mak
-.DEFAULT_GOAL := bundle
-
-
-ifdef OPALDIR
-  include $(OPALDIR)/make/opal.mak
-else
-  include $(shell pkg-config opal --variable=makedir)/opal.mak
-endif
-
-
-CPPFLAGS += $(shell $(WX_CONFIG) --cppflags)
-CXXFLAGS += $(shell $(WX_CONFIG) --cxxflags)
-CFLAGS   += $(shell $(WX_CONFIG) --cflags)
+LINK_FLAGS = -w -g -D__STDC_CONSTANT_MACROS
+LIBS =  -L/usr/lib -lpt -lopal 
 LIBS     += $(shell $(WX_CONFIG) --libs)
+#########################################################
 
+PROGRAM = openphone
 
-openphone.cxx : openphone.xrc
-	$(WXRC) openphone.xrc -c -o openphone.cxx
+OBJS = main.o \
+		openphone.o
 
+$(PROGRAM): $(OBJS)
+	$(CPP) $(LINK_FLAGS) -o $@  $(OBJS) $(LIBS) 
 
+clean:
+	clear
+	rm -rf $(OBJS) *.o $(PROGRAM)
+
+#$(OBJS):%.o :%.c  先用$(OBJS)中的一项，比如foo.o: %.o : %.c  含义为:试着用%.o匹配foo.o。如果成功%就等于foo。如果不成功，  
+# Make就会警告，然后。给foo.o添加依赖文件foo.c(用foo替换了%.c里的%)  
+# 也可以不要下面的这个生成规则，因为下面的 include $(DEF)  就隐含了。此处为了明了，易懂。故留着  
+#compile c source file
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
+%.o: %.C
+	$(CC) $(CFLAGS) -c $< -o $@
+
+#compile c++ source file
+%.o: %.cpp
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+%.o: %.cp
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+%.o: %.CPP
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+%.o: %.cc
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+%.o: %.cxx
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+%.o: %.c++
+	$(CPP) $(CPPFLAGS) -c $< -o $@
