--- a/app/confclient/Makefile
+++ b/app/confclient/Makefile
@@ -25,7 +25,7 @@ else
 endif
 ########################################
 CFLAGS = -Wfatal-errors -fPIC -lpthread
-CPPFLAGS = -Wfatal-errors -fPIC -g -w -Wall -std=c++11 -lpthread -I../ptlib-2.16.2/include -I../opal-3.16.2/include 
+CPPFLAGS = -Wfatal-errors -fPIC -g -w -Wall -std=c++11 -lpthread -I../../ptlib-2.16.2/include -I../../opal-3.16.2/include 
 CPPFLAGS += $(shell $(WX_CONFIG) --cxxflags)
 
 LINK_FLAGS = -w -g -D__STDC_CONSTANT_MACROS
