--- a/ptlib-2.16.2/Makefile
+++ b/ptlib-2.16.2/Makefile
@@ -10,6 +10,11 @@ ifeq ($(OS),Windows_NT)
 	STATIC_SUFFIX = lib
 endif
 
+INSTALLDIR := /usr/local/lib
+ifeq ($(OS),Windows_NT)
+	INSTALLDIR = $(MINGW_PREFIX)/lib
+endif
+
 CFLAGS = -Wfatal-errors -fpermissive -fPIC -lpthread
 CPPFLAGS = -Wfatal-errors -fpermissive -fPIC -g -w -std=c++11 -I./include
 
@@ -58,7 +63,8 @@ clean:
 	rm -rf $(OBJS) *.o $(PROGRAM).$(SHARED_SUFFIX) $(PROGRAM).$(STATIC_SUFFIX)
 
 install:
-	cp -f $(PROGRAM) /e/nonsys/tools/video/
+	cp -f $(PROGRAM).$(SHARED_SUFFIX) $(INSTALLDIR)
+	
 #$(OBJS):%.o :%.c  先用$(OBJS)中的一项，比如foo.o: %.o : %.c  含义为:试着用%.o匹配foo.o。如果成功%就等于foo。如果不成功，  
 # Make就会警告，然后。给foo.o添加依赖文件foo.c(用foo替换了%.c里的%)  
 # 也可以不要下面的这个生成规则，因为下面的 include $(DEF)  就隐含了。此处为了明了，易懂。故留着  
