--- a/app/confserver/Makefile
+++ b/app/confserver/Makefile
@@ -3,7 +3,7 @@ CPP = g++
 
 ########################################
 CFLAGS = -fPIC -lpthread
-CPPFLAGS = -fPIC -g -W -Wall -std=c++11 -lpthread -I/usr/include -I/usr/include/opal
+CPPFLAGS = -fPIC -g -W -Wall -std=c++11 -lpthread -I../../ptlib-2.16.2/include -I ../../opal-3.16.2/include
 
 LINK_FLAGS = -w -g -D__STDC_CONSTANT_MACROS
 LIBS =  -L/usr/lib -lpt -lopal
