--- a/opal-3.16.2/Makefile
+++ b/opal-3.16.2/Makefile
@@ -16,10 +16,10 @@ ifeq ($(OS),Windows_NT)
 endif
 
 CFLAGS = -fPIC -lpthread -Wfatal-errors
-CPPFLAGS = -Wfatal-errors -fPIC -g -w -std=c++11 -I../ptlib-2.16.2/include -I./include -I$(MINGW_PREFIX)/include/srtp/
+CPPFLAGS = -Wfatal-errors -fPIC -g -w -std=c++11 -I../ptlib-2.16.2/include -I./include -I./plugins -I$(MINGW_PREFIX)/include/srtp/
 
 LINK_FLAGS = -fPIC -w -g -D__STDC_CONSTANT_MACROS
-LIBS =  -lstdc++ -L../ptlib-2.16.2 -lpt -lssl -lcrypto -lexpat -lsrtp -lspeexdsp 
+LIBS =  -lstdc++ -L../ptlib-2.16.2 -lpt -lssl -lcrypto -lexpat -lsrtp -lspeexdsp -lopenh264 -lavutil -lavcodec
 ifeq ($(OS),Windows_NT)
 	LIBS +=  -ljpeg -lregex -lwinmm -lwsock32 -lws2_32 -lsnmpapi -lmpr -lcomdlg32 -lgdi32 -lavicap32 -liphlpapi -lole32 -lquartz -lvfw32
 endif
@@ -47,6 +47,8 @@ SRCDIRS   :=  src/asn \
 			src/t120 \
 			src/t38 \
 			src/lids \
+			plugins/video/common \
+			plugins/video/openh264 \
 
 ifeq ($(OS),Windows_NT)
 	SRCDIRS += src/win32
